# zhihu-mcp

./: .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
src/zhihu_mcp/: __init__.py  browser.py  config.py  models.py  server.py
tests/: test_models_and_helpers.py
