[project]
name = "zhihu-mcp"
version = "0.1.0"
description = "Zhihu MCP server for searching and retrieving Zhihu content"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "playwright>=1.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.14.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
zhihu-mcp = "zhihu_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zhihu_mcp"]
